session5/frontend/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/wealthapp/frontend:latest
          name: frontend
          resources: {}
          livenessProbe:
            httpGet:
              path: /cgi-bin/app.py
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /cgi-bin/app.py
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
  strategy:
    type: RollingUpdate
status: {}
